Mantaflow: Liquid checkbox doesn't turn on while switching between fluid types. #77264

Closed
opened 2020-06-02 11:44:17 +02:00 by Stefano Lazzaroni · 6 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: AMD Mobility Radeon HD 5000 Series ATI Technologies Inc. 4.5.13399 Core Profile Context 15.200.1062.1004

Blender Version
Broken: version: 2.90 (sub 4), branch: master, commit date: 2020-05-28 18:34, hash: 2deb6c5177
Worked: (newest version of Blender that worked as expected)

Short description of error
This is not exactly an error, is such an unexpected harmless behaviour.
When you setup a scene for mantaflow (liquid), and you change from liquid to gas the domain type, after you bring back the gas to liquid, it won't auto re-enable the liquid checkbox (if you don't check it, mantaflow won't correctly bake the information).
It's really a super small thing that is of course not priority. But for GUI consistency it would be good to fix this since when you create the domain with liquid it has automatically checked the liquid checkbox.

Exact steps for others to reproduce the error
Simulation.blend
Change domain type from liquid to gas and from gas to liquid. You will see that the checkbox won't be auto-checked.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: AMD Mobility Radeon HD 5000 Series ATI Technologies Inc. 4.5.13399 Core Profile Context 15.200.1062.1004 **Blender Version** Broken: version: 2.90 (sub 4), branch: master, commit date: 2020-05-28 18:34, hash: `2deb6c5177` Worked: (newest version of Blender that worked as expected) **Short description of error** This is not exactly an error, is such an unexpected harmless behaviour. When you setup a scene for mantaflow (liquid), and you change from liquid to gas the domain type, after you bring back the gas to liquid, it won't auto re-enable the liquid checkbox (if you don't check it, mantaflow won't correctly bake the information). It's really a super small thing that is of course not priority. But for GUI consistency it would be good to fix this since when you create the domain with liquid it has automatically checked the liquid checkbox. **Exact steps for others to reproduce the error** [Simulation.blend](https://archive.blender.org/developer/F8571825/Simulation.blend) Change domain type from liquid to gas and from gas to liquid. You will see that the checkbox won't be auto-checked.

Added subscriber: @Lazza

Added subscriber: @Lazza
Ankit Meel changed title from Small Mantaflow GUI unexpected behaviour to Mantaflow: Liquid checkbox doesn't turn on while switching between fluid types. 2020-06-02 13:16:18 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-06-02 14:20:24 +02:00
Member

This seems to toggle each time this is changed, checking...

This seems to toggle each time this is changed, checking...

This issue was referenced by f9892bd6cf

This issue was referenced by f9892bd6cf13a19343691bfa2a13e554b1d34c17
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77264
No description provided.